# cpp17conn

./: .gitmodules  CMakeLists.txt  readme.md
executable/: CMakeLists.txt  main.cpp
libcpp17/: CMakeLists.txt  library.cpp
libcpp20/: CMakeLists.txt
libcpp20/src/: old_interface.cpp  old_interface.h  some_module.cxx
